@@ -14,3 +14,4 @@
 ( cvs diff -u -r 1.8.2.32 -r 1.8.2.33 configure.ac;  cvs diff -u -r 1.4.2.13 -r 1.4.2.14 src/plugin.c;  ) > 1.12.3cvs1.patchset
 ( cvs diff -u -r 1.3 -r 1.4 src/maillock.c;  ) > 1.12.3cvs2.patchset
 ( cvs diff -u -r 1.4.2.14 -r 1.4.2.15 src/plugin.c;  cvs diff -u -r 1.4.2.16 -r 1.4.2.17 src/plugin_gtk.c;  ) > 1.12.3cvs3.patchset
+( cvs diff -u -r 1.4.2.17 -r 1.4.2.18 src/plugin_gtk.c;  ) > 1.12.3cvs4.patchset
