@@ -46,8 +46,11 @@ static void add_mailbox(gpointer callback_data, guint callback_action, GtkWidget
 static GtkItemFactoryEntry mailmbox_popup_entries[] =
 {
 	{N_("/Create _new folder..."),	 NULL, new_folder_cb,     0, NULL},
+	{N_("/---"),			 NULL, NULL,              0, "<Separator>"},
 	{N_("/_Rename folder..."),	 NULL, rename_folder_cb,  0, NULL},
 	{N_("/M_ove folder..."), 	 NULL, move_folder_cb,    0, NULL},
+	{N_("/Cop_y folder..."),	 NULL, move_folder_cb,    1, NULL},
+	{N_("/---"),			 NULL, NULL,              0, "<Separator>"},
 	{N_("/_Delete folder"),		 NULL, delete_folder_cb,  0, NULL},
 	{N_("/---"),			 NULL, NULL,              0, "<Separator>"},
 	{N_("/_Check for new messages"), NULL, update_tree_cb,    0, NULL},
@@ -338,7 +341,7 @@ static void move_folder_cb(FolderView *folderview, guint action, GtkWidget *widg
 	if (!to_folder)
 		return;
 
-	folderview_move_folder(folderview, from_folder, to_folder, FALSE);
+	folderview_move_folder(folderview, from_folder, to_folder, action);
 }
 
 static void rename_folder_cb(FolderView *folderview, guint action,
